--- a/httpd-deployment.yaml
+++ b/httpd-deployment.yaml
@@ -1,4 +1,18 @@
 apiVersion: v1
+kind: Service
+metadata:
+  name: webserver
+  labels:
+    app: webserver
+spec:
+  ports:
+    - port: 80
+      nodePort: 30001
+  selector:
+    type: html
+  type: NodePort
+---
+apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
   name: pvc-webserver
@@ -15,16 +29,18 @@ metadata:
   name: httpd-deploy 
   labels:
     app: webserver
+    type: html
 spec:
   selector:
     matchLabels:
-      app: webserver
+      type: html
   strategy:
     type: Recreate
   template:
     metadata:
       labels:
         app: webserver
+        type: html
     spec:
       containers:
       - image: httpd
