--- a/html.yaml
+++ b/html.yaml
@@ -15,7 +15,7 @@ spec:
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: pvc-webserver
+  name: pvc-html
 spec:
   accessModes:
     - ReadWriteOnce
